integration_tests/codegen_fail/fail/scalar/derive_input/derive_transparent_unit_struct.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
#[graphql(transparent)]
struct ScalarSpecifiedByUrl;

fn main() {}
